fix images vertical alignment in table mode

--- a/src/OrchardCore.Modules/OrchardCore.Media/Assets/scss/_media-items-table-component.scss
+++ b/src/OrchardCore.Modules/OrchardCore.Media/Assets/scss/_media-items-table-component.scss
@@ -36,6 +36,7 @@
         width: 75px;
         padding-left: 16px;
         padding-right: 16px;
+        vertical-align: middle;
 
         .img-wrapper {
             background: white;
